--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -14,6 +14,12 @@
   <title>Footie</title>
   <link rel="apple-touch-icon" href="%PUBLIC_URL%/favicon-32x32.png" />
   <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+  <link rel="preconnect" href="https://fonts.googleapis.com" />
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+  <link
+    href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap"
+    rel="stylesheet"
+  />
 </head>
 <body>
   <noscript>You need to enable JavaScript to run this app.</noscript>
