--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -20,6 +20,11 @@
     href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap"
     rel="stylesheet"
   />
+  <!-- Vercel Analytics -->
+  <script>
+    window.va = window.va || function () { (window.vaq = window.vaq || []).push(arguments); };
+  </script>
+  <script defer src="/_vercel/insights/script.js"></script>
 </head>
 <body>
   <noscript>You need to enable JavaScript to run this app.</noscript>
